welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:8: error: ')' expected but ',' found.
	if (baggle <=2, compteur =5)
                      ^Poucet:12: error: illegal start of simple expression
}	while (!sortieTrouvee()) 
^